Fiddled with a few font sizes and fixed the footer overlapping with the pdf reader.

--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,36 @@
 header {
   text-align: center;
   color: grey;
+  font-family: 'Indie Flower', cursive;
+  padding-bottom: 10px;
 }
 
-header a {
-  text-decoration: none;
-  text-transform: uppercase;
-  color: grey;
+.container h1 {
+  font-size: 48px;
+  font-weight: 800;
+  margin-bottom: 0px;
+}
+
+.container p {
+  font-style: italic;
+  font-size: 18px;
+  font-weight: 400;
+  margin-top: 0px;
 }
 
 header li {;
   display: inline;
   list-style: none;
-  padding: 10px;
+}
+
+header a {
+  font-size: 20px;
+  font-weight: 800;
+  letter-spacing: 0px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: grey;
+  padding: 5px 10px 5px 10px;
 }
 
 header a:hover {
@@ -21,9 +39,42 @@ header a:hover {
 
 .current {
   color: black;
+  border: 3px solid black;
+  /*border-radius: 8px;*/
+  border-radius: 15px 45px;
+}
+
+.body {
+  font-family: 'Indie Flower', cursive;
+  padding: 50px 0px 100px 0px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 36px;
+}
+
+p {
+  font-size: 18px;
 }
 
 footer {
+  font-family: 'Indie Flower', cursive;
+  font-size: 18px;
+  font-weight: 400;
   text-align: center;
   color: grey;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+}
+
+.pdfobject-container {
+  height: 650px;
+  width: 850px;
+  margin: auto;
+}
+
+.pdfobject {
+  border: 1px solid grey;
 }
